# rest2_ampmm

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
analysis/: README.md  alanine_polyproline.py  cln_chignolin.py  cln_noe_folded.py  cln_noe_unfolded.py  cyclic_peptides.py  roundtrips_exchange_acceptance.py  trp_noe.py  trp_structural_analysis.py
configs/default/: default_csv_parameters.json  default_hdf5_parameters.json  ff_default.json  ff_default_tip4pfb.json
data/input_configs/: README.md
data/input_configs/ALA/npt/: config.yaml
data/input_configs/ALA/nvt/: config.yaml
data/input_configs/ALA/production/: config.yaml
data/input_configs/ALA/rest2/: config.yaml
data/input_configs/CHIC/npt/: config.yaml
data/input_configs/CHIC/nvt/: config.yaml
data/input_configs/CHIC/rest2/: config.yaml
data/input_configs/CHICF/npt/: config.yaml
data/input_configs/CHICF/nvt/: config.yaml
data/input_configs/CHICF/rest2/: config.yaml
data/input_configs/CLN/npt/: config.yaml
data/input_configs/CLN/nvt/: config.yaml
data/noe_exp/: README.md  cln_noe_filtered_folded.csv  cln_noe_unfiltered_unfolded.csv  noe_CYC2.csv  noe_CYC2t.csv  trp_noe.csv
data/starting_structures/: README.md
input_generation_scripts_examples/: npt.py  nvt.py  production.py  rest2.py
resources/parameters/: PARAMETERS_MIN_LRv2.yaml  PARAMETERS_MIN_LRv2_tip4pfb.yaml
resources/weights/: MIN_LRv2_state_dict
src/rest2_ampmm/: helper_functions.py  main.py  openmm_wrappers.py  rest2.py  torchforce.py  utils.py
submission_scripts_examples/: submit_SLURM_simulations.sh
(+39 files in other folders)
